# face-mesh

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
facemesh/: __init__.py  __main__.py  calibration.py  cli.py  drawing.py  model.py  recognition.py
scripts/: plot_session.py  render_demo.py  replay.py
src/: __init__.py  calibration.py  detector.py  drawing.py  drowsiness.py  export.py  filters.py  metrics.py  utils.py
tests/: conftest.py  test_calibration.py  test_drowsiness.py  test_export.py  test_filters.py  test_metrics.py  test_recognition.py
